--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="buffer col-12"></div>
         <section class="col-12 text-center">
           <hr>
-          <button class="btn btn-danger">Find Out More</button>
+          <a href="https://mailchi.mp/43628c3483d3/startup">
+            <button class="btn btn-danger">Find Out More</button>
+          </a>
         </section>
       </div>
     </div>
